11/13 Made the calendar show the current weeks date and highlight the current date with a black border
11/17 made more progress on home page, also adjusted header to stay at the top of our page, and make footer a smidge smaller to be able to see our home page a bit better
11/17 added images to home page, and added some small functionality things
11/18 added meeting notes from TA weekly meeting
11/17 added default profile picture
11/17 added default profile picture
11/17 created a general outline for the profile page, the logout button works but the profile picture functionality still needs to be implemented
11/18 delete some sample cases, no need for them kept 1 to make as default user
11/18 linked workout data to user data, just need to add check in home to load user data
11/18 added meeting notes from TA weekly meeting
11/19 - pushed what I have for now in regards to pfp changing, still some bugs that need to be worked out
11/20 - pushed finished working change profile button'
11/21 - actually fixed profile page issues so it should be working now
11/23 - Added necessary files for the lab
11/23 - finished lab
11/24 added errors when users login with incorrect username or password
11/25 - changed nav bar to have home on it
11/27 - added new rendered nodes everytime a new 8 are completed
12/1 - changed header to have a profile picture displayed
12/1 - added unique trophies
12/1 - Added template of readMe 
12/1 - Finished out most of readme requirements
12/1 - change database for different trophy images
12/2 - Updated readme further and simplified some code in a few files
12/2 - finished login/reg css
12/2 - added split to calendar, and streak logout
12/2 - finished calendar and workouts css
12/2 - finished achievements css
12/3 - changed icons to correct ones
12/3 - added personalized icons
12/3 - home page blobs
12/3 - hidden streak on login
12/3 - fixed margin top issue, profile page, and achievements page
12/3 - fixed double error message on login page