@@ -1,1 +1,0 @@
-All course-related documents, including this one, will be stored in this folder.
